packages/runar-rs-macros/tests/compile_fail/contract_on_enum.rs
use runar_lang_macros::contract;

#[contract]
pub enum NotAStruct {
    A,
    B,
}

fn main() {}
