packages/runar-rs-macros/tests/compile_fail/contract_on_enum.stderr
error: #[contract] can only be applied to a struct
 --> tests/compile_fail/contract_on_enum.rs:4:1
  |
4 | / pub enum NotAStruct {
5 | |     A,
6 | |     B,
7 | | }
  | |_^
